crates/pixi-build-cmake/src/snapshots/pixi_build_cmake__tests__cxx_is_not_added_if_gcc_is_already_present.snap
---
source: crates/pixi-build-cmake/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script: "[ ... script ... ]"
requirements:
  build:
    - gxx
    - cmake
    - ninja
  host: []
  run: []
  run_constraints: []
tests: []
about:
  homepage: ~
  license: ~
  summary: ~
  description: ~
  documentation: ~
  repository: ~
extra: ~
